Fixed vertical text alignment

--- a/src/components/Bibliography.css
+++ b/src/components/Bibliography.css
@@ -4,18 +4,6 @@
     margin: 0px;
 }
 
-.splash {
-    width: 360px;
-    margin: 0px;
-    text-align: center;
-    color: white;
-    background-color: rgb(96, 178, 255);
-}
-
-.title {
-    font-size: 1.5em;
-}
-
 .list-container {
     width: 350px;
     height: 300px;
@@ -28,10 +16,14 @@
 }
 
 .list-item {
-    width: 90%;
+    width: 250px;
+    min-height: 48px;
+    justify-content: center;
+}
+
+.list-text {
+    width: 250px;
     height: auto;
-    min-height: 26px;
-    line-height: 26px;
     text-align: left;
     vertical-align: middle;
     word-wrap: break-word;
